bk_ida/gobmkida/c1/close_bubbles
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/close_bubbles/src/engine/score.c:658:11: error: use of undeclared identifier 'byte_9AA89F'
|| ( v6 = byte_9AA89F[v3], v6 != 3) && v15[v3 + 19] == 3 
          ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/close_bubbles/src/engine/score.c:659:11: error: use of undeclared identifier 'byte_9AA88C'
|| ( v7 = byte_9AA88C[v3], v7 != 3) && v15[v3] == 3 
          ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/close_bubbles/src/obj/1/score.o] Error 1
